--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
                 <h2 style="font-size: 40px; text-align: center;">Certificaciones</h2>
                 <br>
                 <div class="gallery-container">
-                    
+                    <!--https://www.credly.com/users/jonathan-salas.c98c4a03/badges-->
                     <div class="gallery__item">                    
-                        <a title="apiReact" href="https://www.credly.com/users/jonathan-salas.c98c4a03/badges" target="_blank"><img src="imagenes/az900.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az900.png" alt="" style="height: 250px; width: 250px;"/></a>                   
                         <p class="gallery__text">AZ-900 Microsoft Azure Fundamentals</p>
                     </div>
                     <div class="gallery__item">                    
-                        <a title="apiReact" href="https://www.credly.com/users/jonathan-salas.c98c4a03/badges" target="_blank"><img src="imagenes/az204.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az204.png" alt="" style="height: 250px; width: 250px;"/></a>                   
                         <p class="gallery__text">AZ-204 Developing solutions for microsoft azure</p>
                     </div>
                     <div class="gallery__item">                    
-                        <a title="apiReact" href="https://www.credly.com/users/jonathan-salas.c98c4a03/badges" target="_blank"><img src="imagenes/az400.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az400.png" alt="" style="height: 250px; width: 250px;"/></a>                   
                         <p class="gallery__text">AZ-400: Designing and Implementing Microsoft DevOps Solutions</p>
                     </div>
                 </div>
