--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Inicio</a></li>
                 <li><a href="#about" class="menu-btn">Acerca</a></li>
-                <li><a href="#about" class="menu-btn">Certificados</a></li>
+                <li><a href="#Cetifi" class="menu-btn">Certificados</a></li>
                 <li><a href="#skills" class="menu-btn">Habilidades</a></li>
                 <li><a href="#proyects" class="menu-btn">Proyectos</a></li>
                 <li><a href="#game" class="menu-btn">Juego</a></li>
@@ -80,38 +80,34 @@
             </div>
         </div>
     </section>
-        <section class="Cetifi" id="Cetifi">
-            <div class="max-width">
-                <h2 style="font-size: 40px; text-align: center;">Certificaciones</h2>
-                <br>
-                <div class="gallery-container">
-                    <!--https://www.credly.com/users/jonathan-salas.c98c4a03/badges-->
-                    <div class="gallery__item">                    
-                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az900.png" alt="" style="height: 250px; width: 250px;"/></a>                   
-                        <p class="gallery__text">AZ-900 Microsoft Azure Fundamentals</p>
-                    </div>
-                    <div class="gallery__item">                    
-                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az204.png" alt="" style="height: 250px; width: 250px;"/></a>                   
-                        <p class="gallery__text">AZ-204 Developing solutions for microsoft azure</p>
-                    </div>
-                    <div class="gallery__item">                    
-                        <a title="apiReact" href="" target="_blank"><img src="imagenes/az400.png" alt="" style="height: 250px; width: 250px;"/></a>                   
-                        <p class="gallery__text">AZ-400: Designing and Implementing Microsoft DevOps Solutions</p>
-                    </div>
+    <section class="Cetifi" id="Cetifi">
+        <div class="max-width">
+            <h2 style="font-size: 40px; text-align: center;">Certificaciones</h2>
+            <br>
+            <div class="gallery-container">
+                <!--https://www.credly.com/users/jonathan-salas.c98c4a03/badges-->
+                <div class="gallery__item">                    
+                    <a title="apiReact" href="" target="_blank"><img src="imagenes/az900.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                    <p class="gallery__text">AZ-900 Microsoft Azure Fundamentals</p>
+                </div>
+                <div class="gallery__item">                    
+                    <a title="apiReact" href="" target="_blank"><img src="imagenes/az204.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                    <p class="gallery__text">AZ-204 Developing solutions for microsoft azure</p>
+                </div>
+                <div class="gallery__item">                    
+                    <a title="apiReact" href="" target="_blank"><img src="imagenes/az400.png" alt="" style="height: 250px; width: 250px;"/></a>                   
+                    <p class="gallery__text">AZ-400: Designing and Implementing Microsoft DevOps Solutions</p>
                 </div>
             </div>
-            </div>
-    
-        </section>
+        </div>
+        </div>
+
+    </section>
     <!-- skill section-->
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">Habilidades</h2>
             <div class="carousel owl-carousel">
-                <div class="shadow-md hover:scale-105 duration-500 py-2 rounded-lg shadow-yellow-500">
-                    <img src="/static/media/javascript.1ccd6ef9bb1f9c84ef00.png" alt="" class="w-20 mx-auto">
-                    <p class="mt-4 text-xs">JavaScript</p>
-                </div>
                 <div class="card">
                     <div class="box">
                         <img src="imagenes/vs.png" alt="">
